// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`calcHeadingToc basic1 custom identifierPrefix 1`] = `
{
  "children": [
    {
      "children": [],
      "contents": [
        {
          "type": "text",
          "value": "Setext headings",
        },
      ],
      "depth": 1,
      "identifier": "waw-setext-headings",
    },
    {
      "children": [
        {
          "children": [
            {
              "children": [
                {
                  "children": [
                    {
                      "children": [
                        {
                          "children": [],
                          "contents": [
                            {
                              "type": "text",
                              "value": "heading6",
                            },
                          ],
                          "depth": 6,
                          "identifier": "waw-heading6",
                        },
                      ],
                      "contents": [
                        {
                          "type": "text",
                          "value": "heading5",
                        },
                      ],
                      "depth": 5,
                      "identifier": "waw-heading5",
                    },
                  ],
                  "contents": [
                    {
                      "type": "text",
                      "value": "heading4",
                    },
                  ],
                  "depth": 4,
                  "identifier": "waw-heading4",
                },
              ],
              "contents": [
                {
                  "type": "text",
                  "value": "heading3",
                },
              ],
              "depth": 3,
              "identifier": "waw-heading3",
            },
          ],
          "contents": [
            {
              "type": "text",
              "value": "heading2",
            },
          ],
          "depth": 2,
          "identifier": "waw-heading2",
        },
      ],
      "contents": [
        {
          "type": "text",
          "value": "heading1",
        },
      ],
      "depth": 1,
      "identifier": "waw-heading1",
    },
  ],
}
`;

exports[`calcHeadingToc basic1 custom identifierPrefix: ast 1`] = `
{
  "children": [
    {
      "children": [
        {
          "children": [
            {
              "children": [
                {
                  "type": "text",
                  "value": "将进酒",
                },
              ],
              "depth": 3,
              "type": "heading",
            },
            {
              "children": [
                {
                  "type": "text",
                  "value": "君不见黄河之水天上来，奔流到海不复回。",
                },
                {
                  "type": "break",
                },
                {
                  "type": "text",
                  "value": "
君不见高堂明镜悲白发，朝如青丝暮成雪。",
                },
                {
                  "type": "break",
                },
                {
                  "type": "text",
                  "value": "
人生得意须尽欢，莫使金樽空对月。",
                },
                {
                  "type": "break",
                },
                {
                  "type": "text",
                  "value": "
天生我材必有用，千金散尽还复来。",
                },
                {
                  "type": "break",
                },
                {
                  "type": "text",
                  "value": "
烹羊宰牛且为乐，会须一饮三百杯。",
                },
                {
                  "type": "break",
                },
                {
                  "type": "text",
                  "value": "
岑夫子，丹丘生，将进酒，杯莫停。",
                },
                {
                  "type": "break",
                },
                {
                  "type": "text",
                  "value": "
与君歌一曲，请君为我倾耳听。",
                },
                {
                  "type": "break",
                },
                {
                  "type": "text",
                  "value": "
钟鼓馔玉不足贵，但愿长醉不复醒。",
                },
                {
                  "type": "break",
                },
                {
                  "type": "text",
                  "value": "
古来圣贤皆寂寞，惟有饮者留其名。",
                },
                {
                  "type": "break",
                },
                {
                  "type": "text",
                  "value": "
陈王昔时宴平乐，斗酒十千恣欢谑。",
                },
                {
                  "type": "break",
                },
                {
                  "type": "text",
                  "value": "
主人何为言少钱，径须沽取对君酌。",
                },
                {
                  "type": "break",
                },
                {
                  "type": "text",
                  "value": "
五花马、千金裘，呼儿将出换美酒，与尔同销万古愁。",
                },
              ],
              "type": "paragraph",
            },
          ],
          "type": "blockquote",
        },
        {
          "children": [
            {
              "alt": "logo",
              "identifier": "logo",
              "label": "logo",
              "referenceType": "collapsed",
              "type": "imageReference",
            },
          ],
          "type": "paragraph",
        },
      ],
      "keyword": "tip",
      "title": [
        {
          "position": {
            "end": {
              "column": 18,
              "line": 2,
              "offset": 18,
            },
            "start": {
              "column": 8,
              "line": 2,
              "offset": 8,
            },
          },
          "type": "text",
          "value": "将进酒 -- 李白 ",
        },
        {
          "position": {
            "end": {
              "column": 23,
              "line": 2,
              "offset": 23,
            },
            "start": {
              "column": 18,
              "line": 2,
              "offset": 18,
            },
          },
          "type": "inlineMath",
          "value": "x^2",
        },
      ],
      "type": "admonition",
    },
    {
      "children": [
        {
          "type": "text",
          "value": "emphasis: ",
        },
        {
          "children": [
            {
              "type": "text",
              "value": "foo "",
            },
            {
              "children": [
                {
                  "type": "text",
                  "value": "bar",
                },
              ],
              "type": "emphasis",
            },
            {
              "type": "text",
              "value": "" foo",
            },
          ],
          "type": "strong",
        },
      ],
      "type": "paragraph",
    },
    {
      "children": [
        {
          "type": "text",
          "value": "autolink(extension): ",
        },
        {
          "children": [
            {
              "type": "text",
              "value": "http://example.com",
            },
          ],
          "type": "link",
          "url": "http://example.com",
        },
      ],
      "type": "paragraph",
    },
    {
      "children": [
        {
          "type": "text",
          "value": "autolink: ",
        },
        {
          "children": [
            {
              "type": "text",
              "value": "foo@bar.example.com",
            },
          ],
          "type": "link",
          "url": "mailto:foo@bar.example.com",
        },
      ],
      "type": "paragraph",
    },
    {
      "children": [
        {
          "type": "text",
          "value": "Setext headings",
        },
      ],
      "depth": 1,
      "identifier": "waw-setext-headings",
      "type": "heading",
    },
    {
      "children": [
        {
          "type": "text",
          "value": "Task List Items (extension):",
        },
      ],
      "type": "paragraph",
    },
    {
      "children": [
        {
          "children": [
            {
              "type": "text",
              "value": "foo",
            },
            {
              "children": [
                {
                  "children": [
                    {
                      "type": "text",
                      "value": "bar",
                    },
                  ],
                  "status": "doing",
                  "type": "listItem",
                },
                {
                  "children": [
                    {
                      "type": "text",
                      "value": "baz",
                    },
                  ],
                  "status": "done",
                  "type": "listItem",
                },
              ],
              "marker": 45,
              "ordered": false,
              "spread": false,
              "type": "list",
            },
          ],
          "status": "done",
          "type": "listItem",
        },
        {
          "children": [
            {
              "type": "text",
              "value": "bim",
            },
          ],
          "status": "todo",
          "type": "listItem",
        },
      ],
      "marker": 45,
      "ordered": false,
      "spread": false,
      "type": "list",
    },
    {
      "children": [
        {
          "children": [
            {
              "type": "text",
              "value": "This is a blockquote",
            },
          ],
          "type": "paragraph",
        },
        {
          "children": [
            {
              "type": "text",
              "value": "with multiple lines.",
            },
          ],
          "type": "paragraph",
        },
      ],
      "type": "blockquote",
    },
    {
      "lang": "typescript",
      "meta": "",
      "type": "code",
      "value": "const a = 'a'
const b = 'b'
console.log('a + b:', a + b)
console.log('This is a typescript code snippets')
",
    },
    {
      "children": [
        {
          "type": "text",
          "value": "This is a math block:",
        },
      ],
      "type": "paragraph",
    },
    {
      "type": "math",
      "value": "\\lvert f(x)-A \\rvert = \\left\\lvert \\frac{x^2-1}{x-1}-2 \\right\\rvert = \\lvert x+1-2 \\rvert = \\lvert x-1 \\rvert  < \\epsilon",
    },
    {
      "type": "thematicBreak",
    },
    {
      "children": [
        {
          "type": "text",
          "value": "heading1",
        },
      ],
      "depth": 1,
      "identifier": "waw-heading1",
      "type": "heading",
    },
    {
      "children": [
        {
          "type": "text",
          "value": "heading2",
        },
      ],
      "depth": 2,
      "identifier": "waw-heading2",
      "type": "heading",
    },
    {
      "children": [
        {
          "type": "text",
          "value": "heading3",
        },
      ],
      "depth": 3,
      "identifier": "waw-heading3",
      "type": "heading",
    },
    {
      "children": [
        {
          "type": "text",
          "value": "heading4",
        },
      ],
      "depth": 4,
      "identifier": "waw-heading4",
      "type": "heading",
    },
    {
      "children": [
        {
          "type": "text",
          "value": "heading5",
        },
      ],
      "depth": 5,
      "identifier": "waw-heading5",
      "type": "heading",
    },
    {
      "children": [
        {
          "type": "text",
          "value": "heading6",
        },
      ],
      "depth": 6,
      "identifier": "waw-heading6",
      "type": "heading",
    },
    {
      "type": "thematicBreak",
    },
    {
      "children": [
        {
          "type": "text",
          "value": "This is a footnote ",
        },
        {
          "children": [
            {
              "type": "text",
              "value": "something....",
            },
          ],
          "type": "footnote",
        },
        {
          "type": "text",
          "value": ".",
        },
      ],
      "type": "paragraph",
    },
    {
      "children": [
        {
          "children": [
            {
              "type": "text",
              "value": "This is a footnote definition.",
            },
          ],
          "type": "paragraph",
        },
      ],
      "identifier": "foo-2",
      "label": "foo-2",
      "type": "footnoteDefinition",
    },
    {
      "children": [
        {
          "type": "text",
          "value": "This is a footnote reference ",
        },
        {
          "identifier": "foo-2",
          "label": "foo-2",
          "type": "footnoteReference",
        },
      ],
      "type": "paragraph",
    },
    {
      "type": "thematicBreak",
    },
    {
      "children": [
        {
          "type": "text",
          "value": "Definitions:",
        },
      ],
      "type": "paragraph",
    },
    {
      "identifier": "logo",
      "label": "logo",
      "title": "The logo of Yozora",
      "type": "definition",
      "url": "/img/logo.png",
    },
    {
      "identifier": "bar",
      "label": "bar",
      "title": "title2",
      "type": "definition",
      "url": "/bar",
    },
    {
      "identifier": "baz",
      "label": "baz",
      "type": "definition",
      "url": "/waw",
    },
    {
      "identifier": "url2",
      "label": "url2",
      "type": "definition",
      "url": "../url//ss/s/./../sd",
    },
    {
      "children": [
        {
          "children": [
            {
              "type": "text",
              "value": "logo",
            },
          ],
          "identifier": "bar",
          "label": "bar",
          "referenceType": "full",
          "type": "linkReference",
        },
        {
          "children": [
            {
              "type": "text",
              "value": "baz",
            },
          ],
          "identifier": "baz",
          "label": "baz",
          "referenceType": "shortcut",
          "type": "linkReference",
        },
        {
          "type": "text",
          "value": "
",
        },
        {
          "children": [
            {
              "type": "text",
              "value": "logo",
            },
          ],
          "identifier": "logo",
          "label": "logo",
          "referenceType": "shortcut",
          "type": "linkReference",
        },
        {
          "type": "text",
          "value": " ",
        },
        {
          "children": [
            {
              "type": "text",
              "value": "bar",
            },
          ],
          "identifier": "baz",
          "label": "baz",
          "referenceType": "full",
          "type": "linkReference",
        },
        {
          "type": "text",
          "value": "
",
        },
        {
          "children": [
            {
              "type": "text",
              "value": "logo",
            },
          ],
          "identifier": "logo",
          "label": "logo",
          "referenceType": "collapsed",
          "type": "linkReference",
        },
      ],
      "type": "paragraph",
    },
    {
      "children": [
        {
          "alt": "logo",
          "identifier": "logo",
          "label": "logo",
          "referenceType": "collapsed",
          "type": "imageReference",
        },
      ],
      "type": "paragraph",
    },
    {
      "children": [
        {
          "children": [
            {
              "type": "text",
              "value": "Guanghechen",
            },
          ],
          "title": "this is a link",
          "type": "link",
          "url": "https://github.com/guanghechen",
        },
        {
          "type": "text",
          "value": " is the author of yozora.",
        },
      ],
      "type": "paragraph",
    },
    {
      "children": [
        {
          "alt": "foo",
          "title": "guanghechen",
          "type": "image",
          "url": "https://avatars.githubusercontent.com/u/42513619?v=4",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "root",
}
`;

exports[`calcHeadingToc basic1 default 1`] = `
{
  "children": [
    {
      "children": [],
      "contents": [
        {
          "type": "text",
          "value": "Setext headings",
        },
      ],
      "depth": 1,
      "identifier": "heading-setext-headings",
    },
    {
      "children": [
        {
          "children": [
            {
              "children": [
                {
                  "children": [
                    {
                      "children": [
                        {
                          "children": [],
                          "contents": [
                            {
                              "type": "text",
                              "value": "heading6",
                            },
                          ],
                          "depth": 6,
                          "identifier": "heading-heading6",
                        },
                      ],
                      "contents": [
                        {
                          "type": "text",
                          "value": "heading5",
                        },
                      ],
                      "depth": 5,
                      "identifier": "heading-heading5",
                    },
                  ],
                  "contents": [
                    {
                      "type": "text",
                      "value": "heading4",
                    },
                  ],
                  "depth": 4,
                  "identifier": "heading-heading4",
                },
              ],
              "contents": [
                {
                  "type": "text",
                  "value": "heading3",
                },
              ],
              "depth": 3,
              "identifier": "heading-heading3",
            },
          ],
          "contents": [
            {
              "type": "text",
              "value": "heading2",
            },
          ],
          "depth": 2,
          "identifier": "heading-heading2",
        },
      ],
      "contents": [
        {
          "type": "text",
          "value": "heading1",
        },
      ],
      "depth": 1,
      "identifier": "heading-heading1",
    },
  ],
}
`;

exports[`calcHeadingToc basic1 default: ast 1`] = `
{
  "children": [
    {
      "children": [
        {
          "children": [
            {
              "children": [
                {
                  "type": "text",
                  "value": "将进酒",
                },
              ],
              "depth": 3,
              "type": "heading",
            },
            {
              "children": [
                {
                  "type": "text",
                  "value": "君不见黄河之水天上来，奔流到海不复回。",
                },
                {
                  "type": "break",
                },
                {
                  "type": "text",
                  "value": "
君不见高堂明镜悲白发，朝如青丝暮成雪。",
                },
                {
                  "type": "break",
                },
                {
                  "type": "text",
                  "value": "
人生得意须尽欢，莫使金樽空对月。",
                },
                {
                  "type": "break",
                },
                {
                  "type": "text",
                  "value": "
天生我材必有用，千金散尽还复来。",
                },
                {
                  "type": "break",
                },
                {
                  "type": "text",
                  "value": "
烹羊宰牛且为乐，会须一饮三百杯。",
                },
                {
                  "type": "break",
                },
                {
                  "type": "text",
                  "value": "
岑夫子，丹丘生，将进酒，杯莫停。",
                },
                {
                  "type": "break",
                },
                {
                  "type": "text",
                  "value": "
与君歌一曲，请君为我倾耳听。",
                },
                {
                  "type": "break",
                },
                {
                  "type": "text",
                  "value": "
钟鼓馔玉不足贵，但愿长醉不复醒。",
                },
                {
                  "type": "break",
                },
                {
                  "type": "text",
                  "value": "
古来圣贤皆寂寞，惟有饮者留其名。",
                },
                {
                  "type": "break",
                },
                {
                  "type": "text",
                  "value": "
陈王昔时宴平乐，斗酒十千恣欢谑。",
                },
                {
                  "type": "break",
                },
                {
                  "type": "text",
                  "value": "
主人何为言少钱，径须沽取对君酌。",
                },
                {
                  "type": "break",
                },
                {
                  "type": "text",
                  "value": "
五花马、千金裘，呼儿将出换美酒，与尔同销万古愁。",
                },
              ],
              "type": "paragraph",
            },
          ],
          "type": "blockquote",
        },
        {
          "children": [
            {
              "alt": "logo",
              "identifier": "logo",
              "label": "logo",
              "referenceType": "collapsed",
              "type": "imageReference",
            },
          ],
          "type": "paragraph",
        },
      ],
      "keyword": "tip",
      "title": [
        {
          "position": {
            "end": {
              "column": 18,
              "line": 2,
              "offset": 18,
            },
            "start": {
              "column": 8,
              "line": 2,
              "offset": 8,
            },
          },
          "type": "text",
          "value": "将进酒 -- 李白 ",
        },
        {
          "position": {
            "end": {
              "column": 23,
              "line": 2,
              "offset": 23,
            },
            "start": {
              "column": 18,
              "line": 2,
              "offset": 18,
            },
          },
          "type": "inlineMath",
          "value": "x^2",
        },
      ],
      "type": "admonition",
    },
    {
      "children": [
        {
          "type": "text",
          "value": "emphasis: ",
        },
        {
          "children": [
            {
              "type": "text",
              "value": "foo "",
            },
            {
              "children": [
                {
                  "type": "text",
                  "value": "bar",
                },
              ],
              "type": "emphasis",
            },
            {
              "type": "text",
              "value": "" foo",
            },
          ],
          "type": "strong",
        },
      ],
      "type": "paragraph",
    },
    {
      "children": [
        {
          "type": "text",
          "value": "autolink(extension): ",
        },
        {
          "children": [
            {
              "type": "text",
              "value": "http://example.com",
            },
          ],
          "type": "link",
          "url": "http://example.com",
        },
      ],
      "type": "paragraph",
    },
    {
      "children": [
        {
          "type": "text",
          "value": "autolink: ",
        },
        {
          "children": [
            {
              "type": "text",
              "value": "foo@bar.example.com",
            },
          ],
          "type": "link",
          "url": "mailto:foo@bar.example.com",
        },
      ],
      "type": "paragraph",
    },
    {
      "children": [
        {
          "type": "text",
          "value": "Setext headings",
        },
      ],
      "depth": 1,
      "identifier": "heading-setext-headings",
      "type": "heading",
    },
    {
      "children": [
        {
          "type": "text",
          "value": "Task List Items (extension):",
        },
      ],
      "type": "paragraph",
    },
    {
      "children": [
        {
          "children": [
            {
              "type": "text",
              "value": "foo",
            },
            {
              "children": [
                {
                  "children": [
                    {
                      "type": "text",
                      "value": "bar",
                    },
                  ],
                  "status": "doing",
                  "type": "listItem",
                },
                {
                  "children": [
                    {
                      "type": "text",
                      "value": "baz",
                    },
                  ],
                  "status": "done",
                  "type": "listItem",
                },
              ],
              "marker": 45,
              "ordered": false,
              "spread": false,
              "type": "list",
            },
          ],
          "status": "done",
          "type": "listItem",
        },
        {
          "children": [
            {
              "type": "text",
              "value": "bim",
            },
          ],
          "status": "todo",
          "type": "listItem",
        },
      ],
      "marker": 45,
      "ordered": false,
      "spread": false,
      "type": "list",
    },
    {
      "children": [
        {
          "children": [
            {
              "type": "text",
              "value": "This is a blockquote",
            },
          ],
          "type": "paragraph",
        },
        {
          "children": [
            {
              "type": "text",
              "value": "with multiple lines.",
            },
          ],
          "type": "paragraph",
        },
      ],
      "type": "blockquote",
    },
    {
      "lang": "typescript",
      "meta": "",
      "type": "code",
      "value": "const a = 'a'
const b = 'b'
console.log('a + b:', a + b)
console.log('This is a typescript code snippets')
",
    },
    {
      "children": [
        {
          "type": "text",
          "value": "This is a math block:",
        },
      ],
      "type": "paragraph",
    },
    {
      "type": "math",
      "value": "\\lvert f(x)-A \\rvert = \\left\\lvert \\frac{x^2-1}{x-1}-2 \\right\\rvert = \\lvert x+1-2 \\rvert = \\lvert x-1 \\rvert  < \\epsilon",
    },
    {
      "type": "thematicBreak",
    },
    {
      "children": [
        {
          "type": "text",
          "value": "heading1",
        },
      ],
      "depth": 1,
      "identifier": "heading-heading1",
      "type": "heading",
    },
    {
      "children": [
        {
          "type": "text",
          "value": "heading2",
        },
      ],
      "depth": 2,
      "identifier": "heading-heading2",
      "type": "heading",
    },
    {
      "children": [
        {
          "type": "text",
          "value": "heading3",
        },
      ],
      "depth": 3,
      "identifier": "heading-heading3",
      "type": "heading",
    },
    {
      "children": [
        {
          "type": "text",
          "value": "heading4",
        },
      ],
      "depth": 4,
      "identifier": "heading-heading4",
      "type": "heading",
    },
    {
      "children": [
        {
          "type": "text",
          "value": "heading5",
        },
      ],
      "depth": 5,
      "identifier": "heading-heading5",
      "type": "heading",
    },
    {
      "children": [
        {
          "type": "text",
          "value": "heading6",
        },
      ],
      "depth": 6,
      "identifier": "heading-heading6",
      "type": "heading",
    },
    {
      "type": "thematicBreak",
    },
    {
      "children": [
        {
          "type": "text",
          "value": "This is a footnote ",
        },
        {
          "children": [
            {
              "type": "text",
              "value": "something....",
            },
          ],
          "type": "footnote",
        },
        {
          "type": "text",
          "value": ".",
        },
      ],
      "type": "paragraph",
    },
    {
      "children": [
        {
          "children": [
            {
              "type": "text",
              "value": "This is a footnote definition.",
            },
          ],
          "type": "paragraph",
        },
      ],
      "identifier": "foo-2",
      "label": "foo-2",
      "type": "footnoteDefinition",
    },
    {
      "children": [
        {
          "type": "text",
          "value": "This is a footnote reference ",
        },
        {
          "identifier": "foo-2",
          "label": "foo-2",
          "type": "footnoteReference",
        },
      ],
      "type": "paragraph",
    },
    {
      "type": "thematicBreak",
    },
    {
      "children": [
        {
          "type": "text",
          "value": "Definitions:",
        },
      ],
      "type": "paragraph",
    },
    {
      "identifier": "logo",
      "label": "logo",
      "title": "The logo of Yozora",
      "type": "definition",
      "url": "/img/logo.png",
    },
    {
      "identifier": "bar",
      "label": "bar",
      "title": "title2",
      "type": "definition",
      "url": "/bar",
    },
    {
      "identifier": "baz",
      "label": "baz",
      "type": "definition",
      "url": "/waw",
    },
    {
      "identifier": "url2",
      "label": "url2",
      "type": "definition",
      "url": "../url//ss/s/./../sd",
    },
    {
      "children": [
        {
          "children": [
            {
              "type": "text",
              "value": "logo",
            },
          ],
          "identifier": "bar",
          "label": "bar",
          "referenceType": "full",
          "type": "linkReference",
        },
        {
          "children": [
            {
              "type": "text",
              "value": "baz",
            },
          ],
          "identifier": "baz",
          "label": "baz",
          "referenceType": "shortcut",
          "type": "linkReference",
        },
        {
          "type": "text",
          "value": "
",
        },
        {
          "children": [
            {
              "type": "text",
              "value": "logo",
            },
          ],
          "identifier": "logo",
          "label": "logo",
          "referenceType": "shortcut",
          "type": "linkReference",
        },
        {
          "type": "text",
          "value": " ",
        },
        {
          "children": [
            {
              "type": "text",
              "value": "bar",
            },
          ],
          "identifier": "baz",
          "label": "baz",
          "referenceType": "full",
          "type": "linkReference",
        },
        {
          "type": "text",
          "value": "
",
        },
        {
          "children": [
            {
              "type": "text",
              "value": "logo",
            },
          ],
          "identifier": "logo",
          "label": "logo",
          "referenceType": "collapsed",
          "type": "linkReference",
        },
      ],
      "type": "paragraph",
    },
    {
      "children": [
        {
          "alt": "logo",
          "identifier": "logo",
          "label": "logo",
          "referenceType": "collapsed",
          "type": "imageReference",
        },
      ],
      "type": "paragraph",
    },
    {
      "children": [
        {
          "children": [
            {
              "type": "text",
              "value": "Guanghechen",
            },
          ],
          "title": "this is a link",
          "type": "link",
          "url": "https://github.com/guanghechen",
        },
        {
          "type": "text",
          "value": " is the author of yozora.",
        },
      ],
      "type": "paragraph",
    },
    {
      "children": [
        {
          "alt": "foo",
          "title": "guanghechen",
          "type": "image",
          "url": "https://avatars.githubusercontent.com/u/42513619?v=4",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "root",
}
`;

exports[`calcHeadingToc basic1 duplicated heading 1`] = `
{
  "children": [
    {
      "children": [],
      "contents": [
        {
          "type": "text",
          "value": "title1",
        },
      ],
      "depth": 1,
      "identifier": "heading-title1",
    },
    {
      "children": [
        {
          "children": [],
          "contents": [
            {
              "type": "text",
              "value": "title1",
            },
          ],
          "depth": 3,
          "identifier": "heading-title1-3",
        },
      ],
      "contents": [
        {
          "type": "text",
          "value": "title1",
        },
      ],
      "depth": 1,
      "identifier": "heading-title1-2",
    },
  ],
}
`;

exports[`calcHeadingToc basic1 duplicated heading: ast 1`] = `
{
  "children": [
    {
      "children": [
        {
          "type": "text",
          "value": "title1",
        },
      ],
      "depth": 1,
      "identifier": "heading-title1",
      "type": "heading",
    },
    {
      "children": [
        {
          "type": "text",
          "value": "title1",
        },
      ],
      "depth": 1,
      "identifier": "heading-title1-2",
      "type": "heading",
    },
    {
      "children": [
        {
          "type": "text",
          "value": "title1",
        },
      ],
      "depth": 3,
      "identifier": "heading-title1-3",
      "type": "heading",
    },
  ],
  "type": "root",
}
`;

exports[`calcIdentifierFromYastNodes basic1 1`] = `"将进酒-君不见黄河之水天上来-奔流到海不复回-君不见高堂明镜悲白发-朝如青丝暮成雪-人生得意须尽欢-莫使金樽空对月-天生我材必有用-千金散尽还复来-烹羊宰牛且为乐-会须一饮三百杯-岑夫子-丹丘生-将进酒-杯莫停-与君歌一曲-请君为我倾耳听-钟鼓馔玉不足贵-但愿长醉不复醒-古来圣贤皆寂寞-惟有饮者留其名-陈王昔时宴平乐-斗酒十千恣欢谑-主人何为言少钱-径须沽取对君酌-五花马-千金裘-呼儿将出换美酒-与尔同销万古愁-emphasis-foo-bar-foo-autolink-extension-http-example-com-autolink-foo-bar-example-com-setext-headings-task-list-items-extension-foo-bar-baz-bim-this-is-a-blockquote-with-multiple-lines-const-a-=-a-const-b-=-b-console-log-a-+-b-a-+-b-console-log-this-is-a-typescript-code-snippets-this-is-a-math-block-lvert-f-x-a-rvert-=-left-lvert-frac-x^2-1-x-1-2-right-rvert-=-lvert-x+1-2-rvert-=-lvert-x-1-rvert-<-epsilon-heading1-heading2-heading3-heading4-heading5-heading6-this-is-a-footnote-something-this-is-a-footnote-definition-this-is-a-footnote-reference-definitions-logo-baz-logo-bar-logo-guanghechen-is-the-author-of-yozora"`;
